Revision history for Perl extension FSA::Rules.

0.36

0.35  2015-03-16T16:04:12Z
      - Fixed failing GraphViz tests by comparing debug output rather than
        canonical.
      - Fixed failing test that failed to require a sufficiently new version
        of Storable.

0.34  2015-03-14T00:45:52Z
      - Added version to FSA::State, thus fixing CPAN indexing, which failed
        for v0.33.

0.33  2015-03-14T00:42:20Z
      - Added test to prevent future memory leaks.
      - Fixed another memory leak caused by circular rule references. Thanks
        to Alceu Rodrigues de Freitas Junior for the report!
      - Eliminated segfault in `stacktrace` on Perl 5.6 when the machine has
        recursive rules. Done by requiring the pure Perl implementation of
        Data::Dumper on versions of Perl less than 5.8.
      - Removed all Pod tests from the distribution.

0.32  2013-10-16T18:38:59Z
      - Fixed a memory leak that prevented any FSA::Rules object from being
        destroyed until program exit. Thanks to Alceu Rodrigues de Freitas
        Junior for the report!

0.31  2012-05-02T16:04:15Z
      - Added `state_params` parameter to `new()`. The specified hash
        reference will be passed as a list to the `state_class` constructor.
        Patch from Chia-liang Kao.

0.30  2012-03-06T05:03:37Z
      - Fixed broken rt.cpan.org email address.
      - Fixed failed tests in `t/graph.t` on Windows.

0.29  2011-06-20T04:55:18
      - Fixed the required Perl version number so that it can be understood
        by older Perls (e.g., 5.5). Reported by Slaven Rezic via cpan-testers.
      - Moved repostitory to [GitHub](https://github.com/theory/fsa-rules/).
      - Switched to a "traditional" `Makefile.PL`.
      - Require Test::Pod 1.41 to run the Pod tests.

0.28  2008-05-22T03:05:24
      - Added a link to the Subversion repository.
      - Updated copyright.
      - Removed Pod::Spelling from `Build.PL`, since the spelling test isn't